--- a/pages/404.html
+++ b/pages/404.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Error 404, página no encontrada o fuera de servicio">
         <meta name="keywords" content="Error404, Error, 404, Error 404, pagenotfound, page, not, found">
         <title>Error 404</title>
-        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
