--- a/pages/Ambienta.html
+++ b/pages/Ambienta.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Ambienta tu casa y transformala en el hogar de tus sueños, aprende sobre las posibilidades que existen para decorar, y adentrate en el mundo de la comodidad">
         <meta name="keywords" content="ambientar, ambienta, horizonte, inmobiliario, hogar, casa, muebles, plantas, comodidad">
         <title>Ambienta - Horizonte Inmobiliario</title>
-        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
