--- a/pages/Descubre.html
+++ b/pages/Descubre.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Descubre el sitio más completo que encontrarás, en el que podrás ver y adquirir la casa de tus sueños, segura y equipada">
         <meta name="keywords" content="descubre, encuentra, horizonte, inmobiliario, hogar, casa, soñado, comodo">
         <title>Descubre - Horizonte Inmobiliario</title>
-        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
@@ -39,8 +39,8 @@
                             <img class="card-img-top" src="../assets/images/casa 1 .jpg" alt="casa1">
                             <div class="card-body">
                                 <h5 class="card-title">Lujosa casa con vistas</h5>
-                                <p class="card-text">Increíble casa con vistas al lago Kajal</p>
-                                <a href="./casas/casa1.html" class="btn btn-primary">Abrir publicación</a>
+                                <p class="card-text">Increíble casa vidriada con vistas al lago Kajal</p>
+                                <a href="./casas/casa1.html" class="btn color">Abrir publicación</a>
                             </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Casa con 2 garajes</h5>
                                 <p class="card-text">Increíble casa con espacio para 3 autos</p>
-                                <a href="./casas/casa2.html" class="btn btn-primary">Abrir publicación</a>
+                                <a href="./casas/casa2.html" class="btn color">Abrir publicación</a>
                             </div>
                         </div>
                     </div>
@@ -59,8 +59,8 @@
                             <img class="card-img-top" src="../assets/images/casa 3 .jpg" alt="casa3">
                             <div class="card-body">
                                 <h5 class="card-title">Increíble casa futurista</h5>
-                                <p class="card-text">Casa futurista con paneles solares</p>
-                                <a href="./casas/casa3.html" class="btn btn-primary">Abrir publicación</a>
+                                <p class="card-text">Casa de 3 pisos futurista con paneles solares</p>
+                                <a href="./casas/casa3.html" class="btn color">Abrir publicación</a>
                             </div>
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Casa en el bosque</h5>
                                 <p class="card-text">Casa tranquila ubicada en el bosque Lorem</p>
-                                <a href="./casas/casa4.html" class="btn btn-primary">Abrir publicación</a>
+                                <a href="./casas/casa4.html" class="btn color">Abrir publicación</a>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Discreta casa en barrio privado</h5>
                                 <p class="card-text">Casa con un diseño simple pero llamativo</p>
-                                <a href="./casas/casa5.html" class="btn btn-primary">Abrir publicación</a>
+                                <a href="./casas/casa5.html" class="btn color">Abrir publicación</a>
                             </div>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Casa en la ciudad</h5>
                                 <p class="card-text">Casa discreta pero acogedora ubicada en un sitio seguro de Lorem</p>
-                                <a href="./casas/casa6.html" class="btn btn-primary">Abrir publicación</a>
+                                <a href="./casas/casa6.html" class="btn color">Abrir publicación</a>
                         </div>
                     </div>
                 </div>
