--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Conoce a cada uno de quienes forman parte de nuestro equipo, horizonte inmobiliario, profundiza tus conocimientos con nuestros expertos">
         <meta name="keywords" content="conocer, equipo, horizonte, inmobiliario, hogar, casa, logistica, trabajo, estrategia">
         <title>Nosotros - Horizonte Inmobiliario</title>
-        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
@@ -42,7 +42,7 @@
                             <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Ernesto Gomez.jpg" alt="Ernesto">
                                 <div class="card-body">
-                                    <h5 class="card-title">Ernesto Gomez</h5>
+                                    <h5 class="card-title">Ernesto Gómez</h5>
                                     <p class="card-text">Él administra todos los terrenos y casas que publicamos, es de suma confianza e importancia para el equipo</p>
                                 </div>
                             </div>
@@ -51,7 +51,7 @@
                             <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Daniela Fernandez.jpg" alt="Daniela">
                                 <div class="card-body">
-                                    <h5 class="card-title">Daniela Fernandez</h5>
+                                    <h5 class="card-title">Daniela Fernández</h5>
                                     <p class="card-text">Es el cerebro del equipo, sabe en que momento y cómo se hacen las cosas, con su experiencia todo es más fácil</p>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
                             <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Juan Lopez.jpg" alt="Juan">
                                 <div class="card-body">
-                                    <h5 class="card-title">Juan Lopez</h5>
+                                    <h5 class="card-title">Juan López</h5>
                                     <p class="card-text">Él es con quien vas a contactar, va a estar a tu disposición para satisfacer tus necesidades e inquietudes</p>
                                 </div>
                             </div>
@@ -69,8 +69,8 @@
                             <div class="card" style="width: 15rem;">
                                 <img class="card-img-top" src="../assets/images/Rita Baez.jpg" alt="Rita">
                                 <div class="card-body">
-                                    <h5 class="card-title">Rita Baez</h5>
-                                    <p class="card-text">Si hay una persona que sabe transformar tu casa en un hogar cómodo, definitivamente es ella</p>
+                                    <h5 class="card-title">Rita Báez</h5>
+                                    <p class="card-text">Si lo que buscas es una persona que sepa cómo transformar tu casa en un hogar cómodo, indudablemente es ella</p>
                                 </div>
                             </div>
                         </div>
