--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Contáctanos para saber que es lo que deseas y que podamos cumplirlo, si buscabas un lugar para hacerte con la casa de tus sueños, no dudes en contactarnos">
         <meta name="keywords" content="contactanos, contacto, horizonte, inmobiliario, hogar, casa, servicio">
         <title>Contacto - Horizonte Inmobiliario</title>
-        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="shortcut icon" href="../favicon.ico">
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
         <link rel="stylesheet" href="../css/all.min.css">
@@ -68,7 +68,10 @@
                     
                 </form>
             <h2 class="h2s">¿Dónde nos encontramos?</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32845.41903053906!2d-5.682219363529277!3d43.311070802444206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd365fabe40a91bd%3A0x984d7011ba090e33!2sC.%20Inmobiliaria%20Setsa%2C%2033930%20Langreo%2C%20Asturias%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1679508789039!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="div__mapa">
+                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32845.41903053906!2d-5.682219363529277!3d43.311070802444206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd365fabe40a91bd%3A0x984d7011ba090e33!2sC.%20Inmobiliaria%20Setsa%2C%2033930%20Langreo%2C%20Asturias%2C%20Espa%C3%B1a!5e0!3m2!1ses!2sar!4v1679508789039!5m2!1ses!2sar" width="800" height="600" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            
 
         </main>
         <footer class="footer">
