--- a/pages/casas/casa1.html
+++ b/pages/casas/casa1.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Encuentra tu casa soñada">
         <meta name="keywords" content="horizonte, inmobiliario, hogar, casa, muebles, plantas, comodidad">
         <title>Casa 1 - Horizonte Inmobiliario</title>
-        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="shortcut icon" href="../../favicon.ico">
         <link rel="stylesheet" href="../../css/bootstrap.min.css">
         <link rel="stylesheet" href="../../css/estilos.css">
         <link rel="stylesheet" href="../../css/all.min.css">
@@ -31,7 +31,7 @@
             </nav>
         </header>
         <main class="main__casas">
-            <h1 class="h1s">Increíble casa con vistas al lago Kajal</h1>
+            <h1 class="h1s">Increíble casa vidriada con vistas al lago Kajal</h1>
             <div class="container-fluid">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
