--- a/pages/casas/casa6.html
+++ b/pages/casas/casa6.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Encuentra tu casa soñada">
         <meta name="keywords" content="horizonte, inmobiliario, hogar, casa, muebles, plantas, comodidad">
         <title>Casa 1 - Horizonte Inmobiliario</title>
-        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="shortcut icon" href="../../favicon.ico">
         <link rel="stylesheet" href="../../css/bootstrap.min.css">
         <link rel="stylesheet" href="../../css/estilos.css">
         <link rel="stylesheet" href="../../css/all.min.css">
