tamaño cards fuente

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -52,7 +52,7 @@
                                 <img class="card-img-top" src="../assets/images/Daniela Fernandez.jpg" alt="Daniela">
                                 <div class="card-body">
                                     <h5 class="card-title">Daniela Fernández</h5>
-                                    <p class="card-text">Es el cerebro del equipo, sabe en que momento y cómo se hacen las cosas, con su experiencia todo es más fácil</p>
+                                    <p class="card-text">Es el cerebro del equipo, sabe en qué momento y cómo se hacen las cosas, con su experiencia todo es más fácil</p>
                                 </div>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
                                 <img class="card-img-top" src="../assets/images/Rita Baez.jpg" alt="Rita">
                                 <div class="card-body">
                                     <h5 class="card-title">Rita Báez</h5>
-                                    <p class="card-text">Si lo que buscas es una persona que sepa cómo transformar tu casa en un hogar cómodo, indudablemente es ella</p>
+                                    <p class="card-text">Si lo que buscas es una persona que sepa cómo transformar tu casa en un hogar cómodo, sin dudas es ella</p>
                                 </div>
                             </div>
                         </div>
